<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.centauro.proyectollamadas.MainActivity"
    android:background="@color/colorPrimaryDark">


<LinearLayout
android:layout_width="wrap_content"
android:orientation="vertical"
android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/screen"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="35dp"
            android:layout_height="50dp"
            android:textSize="35dp"
            android:textAlignment="viewEnd"
            android:background="@color/colorAccent"
            android:textColor="@color/abc_background_cache_hint_selector_material_light" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/button_one"
                            android:text="@string/one"
                            android:layout_marginRight="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/button_two"
                            android:text="@string/two"
                            android:layout_marginRight="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/button_three"
                            android:text="@string/three"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/button_four"
                            android:text="@string/four"
                            android:layout_marginRight="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/button_five"
                            android:text="@string/five"
                            android:layout_marginRight="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/button_six"
                            android:text="@string/six"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/button_seven"
                            android:text="@string/seven"
                            android:layout_marginRight="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/button_eight"
                            android:text="@string/eight"
                            android:layout_marginRight="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/button_nine"
                            android:text="@string/nine"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/button_star"
                            android:text="@string/star"
                            android:layout_marginRight="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/button_zero"
                            android:text="@string/zero"
                            android:layout_marginRight="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/button_hashtag"
                            android:text="@string/hashtag"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        android:gravity="center_horizontal"
                        android:layout_height="match_parent">

                        <ImageButton
                            android:id="@+id/button_call"
                            android:background="@drawable/Phone65"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                 </LinearLayout>

            </LinearLayout>

        </LinearLayout>

</LinearLayout>
